--- a/src/mainPage/mainPage.module.css
+++ b/src/mainPage/mainPage.module.css
@@ -1,7 +1,5 @@
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 
 }
 
@@ -9,7 +7,6 @@
     color: #08086a;
     background: #c9a8e4;
     border-radius: 7px;
-
 }
 .button{
     color: #630808;
